[package]
name = "sunrise-cli"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
structopt = "0.3.8"
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", optional = true }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", optional = true }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", optional = true }

cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }


inspect = { package = "sunrise-inspect", path = "../../../inspect" }
service = { package = "sunrise-service", path = "../service", default-features = false, optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

[features]
default = [ "wasmtime", "cli", "with-dawn-runtime" ]
wasmtime = [ "sc-cli/wasmtime" ]
cli = [
	"service",
	"sp-core",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
]
runtime-benchmarks = [ "service/runtime-benchmarks" ]
with-dawn-runtime = [
	"service/with-dawn-runtime",
]
