[package]
name = "sunrise-service"
version = "0.1.0"
authors = ["Sunrise Prtocol"]
edition = "2018"

[dependencies]
hex-literal = "0.3.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
codec = { package = "parity-scale-codec", version = "2.0.0" }

jsonrpc-core = "15.1.0"

sp-api = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-consensus = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-inherents = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-client-api = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-service = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-executor = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-consensus = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-network = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-cli = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-trie = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sc-tracing = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

sp-block-builder = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-offchain = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-session = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-storage = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

cumulus-client-network = { git = "https://github.com/paritytech/cumulus", rev ="fad35c28b1f73aaeb25dedb46674b48774c092b4"}
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", rev ="fad35c28b1f73aaeb25dedb46674b48774c092b4"}
cumulus-client-consensus = { git = "https://github.com/paritytech/cumulus", rev ="fad35c28b1f73aaeb25dedb46674b48774c092b4"}

polkadot-primitives = { git = "https://github.com/paritytech/polkadot", rev = "9bc8915acd5507a77737371fdd892bb1f6a8db22" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", features = ["real-overseer"] , rev = "9bc8915acd5507a77737371fdd892bb1f6a8db22" }

# local dependencies
primitives = { package = "sunrise-primitives", path = "../../../primitives", default-features = false }
pallet-currencies = { path = '../../../pallets/currencies', default-features = false }
pallet-evm = { path = "../../../pallets/evm", default-features = false }
pallet-evm-rpc-runtime-api = { path = "../../../pallets/evm/rpc/runtime_api", default-features = false }
pallet-evm-accounts = { path = "../../../pallets/evm-accounts", default-features = false }
pallet-evm-bridge = { path = "../../../pallets/evm-bridge", default-features = false }
pallet-exchange = { path = '../../../pallets/exchange', default-features = false }
exchange-rpc-runtime-api = { path = '../../../pallets/exchange/rpc/runtime-api', default-features = false, version = '0.1.0' }
pallet-support = { path = '../../../pallets/support', default-features = false }
pallet-tokens = { path = '../../../pallets/tokens', default-features = false }
pallet-template = { path = '../../../pallets/template', default-features = false }

runtime-common = { path = "../../../runtime/common" }
dawn-runtime = { path = "../../../runtime/dawn", optional = true }
sunrise-runtime = { path = "../../../runtime/sunrise", optional = true }


[dev-dependencies]
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", features = ["test-helpers"] , rev = "e03ca38d45f438932ec92bf69a40b6b16b6ec643" }

[features]
default = ["std", "with-dawn-runtime"]
std = []
runtime-benchmarks = [
	"dawn-runtime/runtime-benchmarks",
	"sunrise-runtime/runtime-benchmarks",
]
with-dawn-runtime = [
	"dawn-runtime",
]
with-sunrise-runtime = [
	"sunrise-runtime",
]
with-all-runtime = [
	"dawn-runtime",
	"sunrise-runtime",
]
